removed argument 'now' from AbstractBot.processBotConfig. Used inner currentDateTime instead